--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
 
     <style>
 
-        #testA{
-
-        display:grid;
-        grid-template-columns: repeat(9,11%);
-
+        #testA
+        {
+            display:grid;
+            grid-template-columns: repeat(9,11%);
             margin-left: 20%;
             margin-right: 20%;
             margin-top: 10%
-
         }
 
-        input{
+        input
+        {
             height:60px;
             text-align: center;
             font-size: 139%;
